updated the content as per tixito for Features & About us

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,13 +6,12 @@
           <img src="images/logo.svg" alt="" />
         </a>
         <p class="mt-6">
-          Lorem ipsum dolor sit sed dmi amet, consectetur adipiscing. Cdo
-          tellus, sed condimentum volutpat.
+          Next Gen Ticketing Platform.
         </p>
       </div>
       <div class="col-12 mt-12 md:col-6 lg:col-3">
         <h6>Socials</h6>
-        <p>themefisher@gmail.com</p>
+        <p>contact@senkusha.in</p>
         <ul class="social-icons mt-4 lg:mt-6">
           <li>
             <a href="#">
@@ -99,8 +98,12 @@
       </div>
       <div class="col-12 mt-12 md:col-6 lg:col-3">
         <h6>Location & Contact</h6>
-        <p>2118 Thornridge Cir. Syracuse, Connecticut 35624</p>
-        <p>(704) 555-0127</p>
+        <p>Senkusha Technologies LLP,
+WeWork NESCO IT Park, Bu
+ilding 4, Nesco IT Park, Western Express Highway, </p>
+        <p>Goregaon (East) Mumbai, Maharashtra 400063</p>
+                <p>+91 7738683024</p>
+
       </div>
     </div>
   </div>
