--- a/product-landing-main/src/partials/head.html
+++ b/product-landing-main/src/partials/head.html
@@ -24,7 +24,7 @@
   />
 
   <!-- title -->
-  <title>Pinwheel-tailwind</title>
+  <title>Tixito</title>
 
   <!-- noindex robots -->
   <meta name="robots" content="" />
